# eas-api

./: Cargo.toml
abi/: AvatarService.json
src/: lib.rs  main.rs  supported_networks.rs
src/extractors/: ethereum_address.rs  mod.rs
src/handlers/: avatar.rs  mod.rs  whitelist.rs
src/models/: avatar.rs  mod.rs  nft.rs  whitelist.rs
src/response/: avatar.rs  error.rs  mod.rs
src/services/: avatar.rs  mod.rs
src/services/rpc/: base.rs  ethereum.rs  mod.rs  polygon.rs  sepolia.rs
